# myapp

./: .dockerignore  .env.example  .env.replit  .gitignore  .license_key  .replit  .settings_key  00_COMPLETE_UNINSTALL_DATAGUARDIAN.sh  01_ENHANCED_COMPLETE_REPLIT_DEPLOY.sh  01_FRESH_DEPLOY_EXACT_REPLIT.sh  01_PRODUCTION_DEPLOY.sh  01_REMOTE_ENHANCED_DEPLOY.sh  01_TARGETED_DEPLOY.sh  01_system_prep.sh  02_VALIDATE_REPLIT_MATCH.sh  02_python_setup.sh  03_VALIDATE_COMPLETE_REPLIT_MATCH.sh  03_app_install.sh  04_services_setup.sh  05_final_config.sh  ABSOLUTE_FINAL_FIX.sh  ABSOLUTE_LAST_FIX.sh  ACTIVITYTRACKER_INTEGRATION_SUMMARY.md  ADD_JWT_AND_FIX_ALL.sh  ADD_JWT_SECRET.sh  ADD_JWT_WITH_RLS_FIX.sh  ADD_REDIS_TO_SERVER.sh  ADD_SSL_TO_NGINX.sh  AI_ACT_2025_MARKET_LAUNCH_STRATEGY.md  AI_ACT_DIRECT_OUTREACH_CAMPAIGN.md  AI_ACT_LANDING_PAGE_CONTENT.md  AI_ACT_WEBINAR_SERIES_PLAN.md  AI_DIFFERENTIATORS_TECHNICAL_DEEP_DIVE.md  AI_FRAUD_DETECTION_REQUIREMENTS.md  AI_MODEL_SCANNER_ARCHITECTURE_DESIGN.md  AI_Model_Scanner_Architecture_Diagram.txt  ALL_16_SCANNERS_COMPLETE.md  APPLY_TAR_FIX.sh  AUTOMATED_TEST_SUITE_SUMMARY.md  AZURE_SQL_QUICKSTART.md  (+843 more)
.disabled_pages/: soc2_scanner.py
.github/: gitleaks.toml
.streamlit/: config.toml
DataGuardian-Pro-Standalone-Source/: INSTALL.bat  README.txt  START_HERE.bat  pyproject.toml  requirements.txt  run_dataguardian.bat
access_control/: __init__.py  google_auth.py  rbac.py  roles_config.py  user_management.py
attached_assets/: CORRECTED_Aanvraag_om_Octrooi_OLD_1761389201431.txt  CORRECTED_Patent_Conclusions_FINAL_1761389201432.txt  CORRECTED_Patent_Description_1761389201429.txt  CORRECTED_Patent_Drawings_FINAL_1761389201430.txt  PAT-GITHUB_1756580131710.txt  Pasted--0-certbot-3-10-Requirement-already-satisfied-urllib3-3-1-21-1-in-usr-local-lib-python3-11--1758486282342_1758486282343.txt  Pasted--1-code-scanner-Stack-Python-TruffleHog-Semgrep-Purpose-Detect-secrets-credentials-PII-a-1744931413343.txt  Pasted--14-naming-to-docker-io-library-dataguardian-latest-0-0s-done-14-DONE-0-4s-dataguardian-container-1760216141030_1760216141033.txt  Pasted--2025-09-10-22-56-29-Configuring-fail2ban-Synchronizing-state-of-fail2ban-service-with-SysV-ser-1757538023784_1757538023785.txt  Pasted--2025-10-04-19-08-41-847-scanner-code-profiler-INFO-System-monitoring-started-WARNING-root-L-1759605247796_1759605247798.txt  Pasted--2025-10-04-21-14-47-474-scanner-code-profiler-INFO-System-monitoring-started-WARNING-root-L-1759612527460_1759612527461.txt  Pasted--AI-Powered-Predictive-Compliance-Report-Organization-vishaal314-Generated-September-14-2025-1757847350613_1757847350614.txt  Pasted--AI-Powered-Predictive-Compliance-Report-Organization-vishaal314-Generated-September-14-2025-1757847567939_1757847567940.txt  Pasted--API-Security-Scan-Report-Comprehensive-security-analysis-for-https-graph-facebook-com-v-versio-1757880450195_1757880450197.txt  Pasted--Application-https-dataguardianpro-nl-Login-vishaal314-vishaal2024-root-vishaalnoord7-1759783404335_1759783404337.txt  Pasted--Backup-created-app-py-backup-20250911-232040-root-vishaalnoord7-opt-dataguardian-pro-docker-l-1757625934288_1757625934289.txt  Pasted--Brand-Name-div-style-text-align-left-h1-style--1746742565632.txt  Pasted--CACHED-2-9-WORKDIR-app--1759787597771_1759787597773.txt  Pasted--Container-dataguardian-nginx-1-Removed--1758838384911_1758838384912.txt  (+228 more)
(+1186 files in other folders)
