[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "anthropic>=0.53.0",
    "bcrypt>=4.3.0",
    "beautifulsoup4>=4.8.2",
    "cachetools>=5.5.2",
    "cryptography>=45.0.5",
    "dnspython>=2.7.0",
    "memory-profiler>=0.61.0",
    "openai>=1.75.0",
    "opencv-python-headless>=4.12.0.88",
    "opencv-python>=4.12.0.88",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "plotly>=6.1.2",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "psycopg2-pool>=1.2",
    "py-spy>=0.4.0",
    "pyinstaller>=6.14.2",
    "pyjwt>=2.10.1",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-jose>=3.5.0",
    "python-whois>=0.9.5",
    "pyyaml>=6.0.2",
    "redis>=6.2.0",
    "reportlab>=4.4.0",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
    "stripe>=12.0.0",
    "svglib>=1.5.1",
    "textract>=1.6.5",
    "tldextract>=5.2.0",
    "trafilatura>=2.0.0",
    "flask>=3.1.2",
    "mysql-connector-python>=9.4.0",
]
