[tool.poetry]
name = "dataguardian-pro"
version = "1.0.0"
description = "Enterprise Privacy Compliance Platform targeting Netherlands market with complete regulatory coverage"
authors = ["DataGuardian Team <info@dataguardianpro.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = ">=1.28.0"
anthropic = ">=0.7.0"
openai = ">=1.3.0"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
pillow = ">=10.0.0"
psycopg2-binary = ">=2.9.7"
redis = ">=4.6.0"
requests = ">=2.31.0"
aiohttp = ">=3.8.5"
beautifulsoup4 = ">=4.12.0"
trafilatura = ">=1.6.0"
tldextract = ">=3.4.0"
pypdf2 = ">=3.0.1"
reportlab = ">=4.0.0"
pdfkit = ">=1.0.0"
bcrypt = ">=4.0.1"
pyjwt = ">=2.8.0"
cryptography = ">=41.0.0"
authlib = ">=1.2.1"
stripe = ">=6.0.0"
plotly = ">=5.17.0"
psutil = ">=5.9.0"
memory-profiler = ">=0.60.0"
cachetools = ">=5.3.0"
dnspython = ">=2.4.0"
pyyaml = ">=6.0.1"
pytesseract = ">=0.3.10"
opencv-python-headless = ">=4.8.0"
python-jose = ">=3.3.0"
python-multipart = ">=0.0.6"
joblib = ">=1.3.0"
markdown2 = ">=2.4.0"
weasyprint = ">=60.0"
svglib = ">=1.5.1"
flask = ">=2.3.0"
python-whois = ">=0.8.0"
pycryptodome = ">=3.19.0"
python3-saml = ">=1.15.0"
mysql-connector-python = ">=8.2.0"
onnx = ">=1.15.0"
onnxruntime = ">=1.16.0"
py-spy = ">=0.3.14"
python-docx = ">=0.8.11"
openpyxl = ">=3.1.0"
xlrd = ">=2.0.1"
python-magic = ">=0.4.27"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
